<resources>
    <string name="app_name">Parse Push Segmented by Channels</string>

    <!-- Main Activity -->
    <string name="main_activity_channel_1_hint">Channel 1</string>
    <string name="main_activity_channel_2_hint">Channel 2</string>

    <string name="main_activity_calculate_button">Calculate</string>
    <string name="main_activity_number_users">Found %1$d users</string>
    <string name="main_activity_message_hint">Message</string>
    <string name="main_activity_send_button">Send</string>

    <string name="error_empty_field">This field cannot be empty</string>

    <string name="main_activity_app_version_title">App version not equal to:(optional)</string>
    <string name="main_activity_app_version_hint">Enter app version here</string>

</resources>
